--- a/style.css
+++ b/style.css
@@ -14,17 +14,17 @@ h1 {
     justify-content: center;
     align-items: center;
     gap: 20px;
-    margin: 50px 0;
+    margin: 3rem 0;
 }
 #start-btn {
     background-color:floralwhite;
     color:darkmagenta;
     padding: 10px 20px;
     border: none;
-    border-radius: 5px;
+    border-radius: 0.3rem;
     cursor: pointer;
     font-size: larger;
-    margin-top: 30px;
+    margin-top: 1.8rem;
     
 }
 
@@ -35,12 +35,12 @@ h1 {
 #replay-btn {
     background-color:darkmagenta;
     color: floralwhite;
-    padding: 10px 20px;
+    padding: 0.6rem 1.25rem;
     border: none;
-    border-radius: 5px;
+    border-radius: 1%;
     cursor: pointer;
     font-size: larger;
-    margin-top: 30px;
+    margin-top: 1.8rem;
 }
 
 #replay-btn:hover {
@@ -64,10 +64,10 @@ h1 {
 
 .ball {
     position: absolute;
-    top: 80px;
+    top: 5rem;
     left: 50%;
     transform: translateX(-50%);
-    width: 30px;
+    width: 1.8rem;
     display: none;
 }
 
