--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h1 {
     color: floralwhite;
     padding: 0.6rem 1.25rem;
     border: none;
-    border-radius: 1%;
+    border-radius: 5px;
     cursor: pointer;
     font-size: larger;
     margin-top: 1.8rem;
